# Sofia

./: .flake8  .gcloudignore  .gitattributes  BULK_API_FIXES.md  DEPLOYMENT_REPORT_20250801.md  Dockerfile  INTEGRAZIONE_COMPLETA_REPORT_20250801.md  Makefile  PR_COMMENT.md  README.md  clean_firebase_production_final.py  cloudrun.yaml  env.yaml  pyproject.toml  pytest.ini  requirements-bulk.txt  requirements.txt  sample_convo.json  setup.py  smoke_test_bulk_api.sh  test_app.py  test_e2e_conversation.py  test_name_extraction.py  test_persistence.py  tox.ini
.github/: branch-protection.yml
Sofia-AI/: .gcloudignore  .gitignore  ANALISI_USER_JOURNEY_COMPLETA.md  CONTRIBUTING.md  DEPLOYMENT-GUIDE.md  Dockerfile  Dockerfile.production  LICENSE  Makefile  PRODUZIONE_READY.md  README.md  SECURITY.md  cloudbuild.yaml  cloudrun.yaml  deploy.sh  deploy_staging.sh  docker-compose.prod.yml  docker-compose.yml  e2e_test_report.md  hammer_ultimate_journey.py  hammer_Δmini.py  hammer_γ4.py  hammer_γ5.py  requirements-dev.txt  requirements.txt  setup.py  sofia-service-config.yaml  test_app.py  test_hammer.py  test_hammer_report.json  test_local_conversation.py  test_quick_verification.py  test_γ4_optimization.py  tox.ini
data/: conversations.json
docs/: CLIENT_TESTS_README.md  HAMMER_FAILMAP.md  IMPLEMENTATION_AUDIT_20250801.md  TEST_PASS_CERT_20250801.md  client_bulk_api.md  github_secrets_setup.md
load/: README.md  k6_script.js  package.json  run_load_test.sh
luna-agent/: .gitignore  AGENT.md  README.md  agent_factory.py  main.py  requirements.txt
monitoring/: Dockerfile  (+2 more)
(+524 files in other folders)
