[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sofia-bulk-api"
version = "0.1.0"
description = "Bulk API per test conversazioni Sofia"
authors = [
    {name = "Sofia Team", email = "team@sofia.ai"}
]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.0",
    "pydantic==2.10.0",
    "python-dotenv==1.0.0",
    "httpx==0.27.0",
    "slowapi==0.1.9",
    "tinydb==4.8.0",
    "boto3==1.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.0",
    "pytest-asyncio==0.21.1",
    "pytest-mock==3.11.1",
]

[project.urls]
Homepage = "https://github.com/EI94/Sofia"
Repository = "https://github.com/EI94/Sofia"
Issues = "https://github.com/EI94/Sofia/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["sofia_bulk_api*"]

[tool.pytest.ini_options]
markers = [
    "bulk: marks tests as bulk api tests",
]
testpaths = ["tests_bulk"]
